plugins {
    id 'java'
    id 'maven'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
}

group 'com.github.johnnyjayjay'
version '1.0-TEST'

sourceCompatibility = 12

repositories {
    maven {
        url "https://hub.spigotmc.org/nexus/content/repositories/snapshots"
    }
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots"
    }
	jcenter()
	mavenCentral()
}

dependencies {
    compileOnly "org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT"
    implementation "com.github.johnnyjayjay:spigot-maps:2.1"
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

compileJava.options.encoding "UTF-8"

